--- a/centered.html
+++ b/centered.html
@@ -6,18 +6,25 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-    <title>Containers</title>
+    <title>centered</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div class="container" style="display: grid; justify-content: center; height: 100vh; align-items: center;">
-        <div style="width: 250px; height: 250px; background-color: green;"></div>
+    <div class="container">
+        <div class="row vh-100 justify-content-center align-items-center">
+            <div class="col-4 green">
+                centered
+            </div>
+        </div>
     </div>
-    </div>
-    <script src="index.js"></script>
 </body>
 </html>
+<!-- <div class="container" style="display: grid; justify-content: center; height: 100vh; align-items: center;">
+    <div style="width: 250px; height: 250px; background-color: green;"></div>
+</div>
+</div>
+<script src="index.js"></script> -->
+
