--- a/containers.html
+++ b/containers.html
@@ -6,19 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
-    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
     <title>Containers</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-
+    <link rel="stylesheet" href="/css/styles.css">
 </head>
 <body>
-    <div class="container-xxl" style="background-color: blue; height: 20vh;"></div>
-    <div class="container-xl" style="background-color: green; height: 20vh;"></div>
-    <div class="container-lg" style="background-color: yellow; height: 20vh;"></div>
-    <div class="container-md" style="background-color: orange; height: 20vh;"></div>
-    <div class="container-sm" style="background-color: red; height: 20vh;"></div>
+    <div class="container-fliud-xxl blue"></div>
+    <div class="container-xl green"></div>
+    <div class="container-lg yellow"></div>
+    <div class="container-md orange"></div>
+    <div class="container-sm red"></div>
     <script src="index.js"></script>
 </body>
 </html>
