--- a/index.html
+++ b/index.html
@@ -6,40 +6,18 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.gstatic.com">
     <link href="https://fonts.googleapis.com/css2?family=Orbitron&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/js/bootstrap.min.js" integrity="sha384-7VPbUDkoPSGFnVtYi0QogXtr74QeVeeIs99Qfg5YCF+TidwNdjvaKZX19NZ/e6oz" crossorigin="anonymous"></script>
-    <title>row-colomns</title>
+    <title>Home page</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-iYQeCzEYFbKjA/T2uDLTpkwGzCiq6soy8tYaI1GyVh/UjpbCx/TYkiZhlZB6+fzT" crossorigin="anonymous">
-    <link rel="stylesheet" href="/css/styles.css">
+
 </head>
 <body>
-    <div class="container-fliud green"></div>
-    <div class="container">
-        <div class="row">
-            <div class="col-6 col-sm-6 col-md-3  black"></div>
-            <div class="col-6 col-sm-6 col-md-3  gray"></div>
-            <div class="col-6 col-sm-6 col-md-3  yellow"></div>
-            <div class="col-6 col-sm-6 col-md-3  blue"></div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col-12 col-sm-4 yellow"></div>
-            <div class="col-12 col-sm-4 orange"></div>
-            <div class="col-12 col-sm-4 purple"></div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row justify-content-center">
-            <div class="col-6 green "></div>
-        </div>
-    </div>
-    <div class="container">
-        <div class="row">
-            <div class="col blue"></div>
-            <div class="col gray"></div>
-        </div>
-    </div>
+    <div>Here is the <a href="/containers.html">container</a>.</div>
+    <div>Here is the <a href="/row-columns.html">row-columns</a>.</div>
+    <div>Here is the <a href="/centered.html">centered box</a>.</div>
+    <div>Here is the <a href="/cards.html">cards</a>.</div>
     <script src="index.js"></script>
 </body>
 </html>
