--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
 
 </head>
 <body>
+    <h1>Links</h1>
     <div>Here is the <a href="./containers.html">container</a>.</div>
     <div>Here is the <a href="./row-columns.html">row-columns</a>.</div>
     <div>Here is the <a href="./centered.html">centered box</a>.</div>
