--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 </head>
 <body>
     <h1>Links</h1>
-    <div>Here is the <a href="./containers.html">container</a>.</div>
-    <div>Here is the <a href="./row-columns.html">row-columns</a>.</div>
-    <div>Here is the <a href="./centered.html">centered box</a>.</div>
-    <div>Here is the <a href="./cards.html">cards</a>.</div>
+    <div>Here is the <a href="/legos/containers.html">container</a>.</div>
+    <div>Here is the <a href="/legos/row-columns.html">row-columns</a>.</div>
+    <div>Here is the <a href="/legos/centered.html">centered box</a>.</div>
+    <div>Here is the <a href="/legos/cards.html">cards</a>.</div>
     <script src="index.js"></script>
 </body>
 </html>
