adding some boot

--- a/contact.html
+++ b/contact.html
@@ -11,8 +11,18 @@
 <body>
 <div class="container-sm bg-success">
     <div class="row justify-content-center">
-        <div class="col-6 bg-primary rounded">
-            hi
+        <div class="col-6 col-lg-4 bg-primary rounded">
+            <br>
+            <img src="DALL·E 2022-10-04 13.20.50 - blurry underwater photo of a hammerhead shark swimming towards a school of fish.png" class="img-thumbnail rounded-circle" alt="placeholder">
+            <div> 
+                <br>
+                <div class="card">
+                    <h5 class="card-title text-center">C. Morgan Montague</h5>
+                    <h6 class="card-subtitle mb-2 text-muted text-center">Work in Progress Programmer</h6>
+                    <br>
+                    <img src="Email.svg" class="img" alt="Email Logo">
+                </div>
+            </div>
         </div>
     </div>
 
