added some icons and moved around the positioning

--- a/contact.html
+++ b/contact.html
@@ -20,12 +20,40 @@
                     <h5 class="card-title text-center">C. Morgan Montague</h5>
                     <h6 class="card-subtitle mb-2 text-muted text-center">Work in Progress Programmer</h6>
                     <br>
-                    <img src="Email.svg" class="img" alt="Email Logo">
+                    <div class="row text-center">
+                        <div class="col">
+                            <a href = "mailto: morgan@wmlex.com">
+                                <img src="/images/email.png" class="img" alt="Email Logo" height="100px" width="100px">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="https://github.com/morganmontague">
+                                <img src="/images/github.png" class="img" alt="github link" height="100px" width="100px">
+                            </a>
+                        </div>
+                    </div>
+                    <br>
+                    <br>
+                    <div class="row text-center">
+                        <div class="col">
+                            <a href = "mailto: morgan@wmlex.com">
+                                <img src="/images/email.png" class="img" alt="Email Logo" height="100px" width="100px">
+                            </a>
+                        </div>
+                        <div class="col">
+                            <a href="https://github.com/morganmontague">
+                                <img src="/images/github.png" class="img" alt="github link" height="100px" width="100px">
+                            </a>
+                        </div>
+                    </div>
+                    <br>
                 </div>
+                <br>
             </div>
         </div>
+        <br>
     </div>
-
+<br>
 </div>
 </body>
 </html>
